# storage/api-docs/api-docs.json
@@ -31,8 +31,8 @@
                         "application/x-www-form-urlencoded": {
                             "schema": {
                                 "properties": {
-                                    "phone": {
-                                        "description": "Номер телефона пользователя",
+                                    "username": {
+                                        "description": "Логин пользователя",
                                         "type": "string"
                                     },
                                     "password": {
@@ -774,6 +774,26 @@
                 "responses": {
                     "200": {
                         "description": "Категории в меню"
+                    },
+                    "400": {
+                        "description": "Что-то не так"
+                    }
+                }
+            }
+        },
+        "/web/v1/statistics": {
+            "get": {
+                "tags": [
+                    "v1",
+                    "admin",
+                    "web"
+                ],
+                "summary": "Статистика в главное странице админки",
+                "description": "Статистика в главное странице админки",
+                "operationId": "getStatistics",
+                "responses": {
+                    "200": {
+                        "description": "Успешно получены"
                     },
                     "400": {
                         "description": "Что-то не так"
